# Compile-Time-Fun

./: .gitignore  CMakeLists.txt  README.md
khct/khct/: common.hpp  json.hpp  map.hpp  string.hpp
tests/: common.cpp  json.cpp  map.cpp  string.cpp
